<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

        <RelativeLayout style="@style/LayerParent">

            <CheckedTextView
                    style="@style/LayerLabel"
                    android:id="@+id/poi_layers_atm_label"
                    android:drawableStart="@drawable/ic_local_atm"
                    android:text="@string/poi_layers_atms"/>

            <CheckBox
                    style="@style/LayerCheckBox"
                    android:id="@+id/poi_layers_atm_check"/>

        </RelativeLayout>

        <RelativeLayout style="@style/LayerParent">

            <CheckedTextView
                    style="@style/LayerLabel"
                    android:id="@+id/poi_layers_greyhound_label"
                    android:drawableStart="@drawable/ic_directions_bus"
                    android:text="@string/poi_layers_greyhound"/>

            <CheckBox
                    style="@style/LayerCheckBox"
                    android:id="@+id/poi_layers_greyhound_check"/>

        </RelativeLayout>

        <RelativeLayout style="@style/LayerParent"
                        android:visibility="gone">

            <CheckedTextView
                    style="@style/LayerLabel"
                    android:id="@+id/poi_layers_photosphere_label"
                    android:drawableStart="@drawable/ic_poi_photosphere"
                    android:text="@string/poi_layers_photospheres"/>

            <CheckBox
                    style="@style/LayerCheckBox"
                    android:id="@+id/poi_layers_photosphere_check"/>

        </RelativeLayout>

        <RelativeLayout style="@style/LayerParent">

            <CheckedTextView
                    style="@style/LayerLabel"
                    android:id="@+id/poi_layers_helplines_label"
                    android:drawableStart="@drawable/ic_alert"
                    android:text="@string/poi_layers_helplines"/>

            <CheckBox
                    style="@style/LayerCheckBox"
                    android:id="@+id/poi_layers_helplines_check"/>

        </RelativeLayout>

        <RelativeLayout style="@style/LayerParent">

            <CheckedTextView
                    style="@style/LayerLabel"
                    android:id="@+id/poi_layers_libraries_label"
                    android:drawableStart="@drawable/ic_poi_library"
                    android:text="@string/poi_layers_libraries"/>

            <CheckBox
                    style="@style/LayerCheckBox"
                    android:id="@+id/poi_layers_libraries_check"/>

        </RelativeLayout>

        <RelativeLayout style="@style/LayerParent">

            <CheckedTextView
                    style="@style/LayerLabel"
                    android:id="@+id/poi_layers_defibrillators_label"
                    android:drawableStart="@drawable/ic_poi_defibrillator"
                    android:text="@string/poi_layers_defibrillators"/>

            <CheckBox
                    style="@style/LayerCheckBox"
                    android:id="@+id/poi_layers_defibrillators_check"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
