<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:background="?colorPrimary"
            android:elevation="8dp">

        <ImageView
                android:id="@+id/home_header_icon"
                android:layout_width="72dp"
                android:layout_height="94dp"
                android:layout_gravity="end|bottom"
                android:alpha="0.4"
                android:padding="16dp"
                android:scaleType="fitXY"
                android:background="@drawable/content_uwaterloo_crest"
                android:translationX="16dp"
                android:translationY="16dp"/>

        <TextView
                style="@style/TextAppearance.UWaterloo.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_margin="16dp"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                fontPath="@string/font_light"/>

    </FrameLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="16dp">

            <fragment
                    android:id="@+id/home_nearby_locations_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="com.deange.uwaterlooapi.sample.ui.modules.home.NearbyLocationsFragment"/>

            <com.deange.uwaterlooapi.sample.ui.view.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                <TextView
                        style="@style/TextAppearance.UWaterloo.Title"
                        android:id="@+id/home_weather_selectable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:gravity="center"
                        android:padding="32dp"
                        android:text="@string/home_quick_weather"/>

            </com.deange.uwaterlooapi.sample.ui.view.CardView>

            <com.deange.uwaterlooapi.sample.ui.view.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                <LinearLayout
                        android:id="@+id/home_course_selectable"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?selectableItemBackground"
                        android:orientation="vertical">

                    <TextView
                            style="@style/TextAppearance.UWaterloo.Title"
                            android:id="@+id/home_course_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="16dp"
                            android:text="@string/home_quick_course_lookup"/>

                    <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="16dp"
                            android:gravity="center">

                        <com.deange.uwaterlooapi.sample.ui.view.ShowAllAutoCompleteTextView
                                android:id="@+id/home_course_subject"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:imeOptions="actionNext"
                                android:inputType="textNoSuggestions"
                                android:minWidth="100dp"
                                android:singleLine="true"
                                android:textAllCaps="true"
                                android:textColor="@android:color/black"
                                tools:ignore="RtlHardcoded"/>

                        <EditText
                                android:id="@+id/home_course_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@id/home_course_subject"
                                android:gravity="start"
                                android:imeOptions="actionSearch"
                                android:inputType="textNoSuggestions"
                                android:minWidth="100dp"
                                android:singleLine="true"
                                android:textAllCaps="true"
                                android:textColor="@android:color/black"
                                tools:ignore="RtlHardcoded,TextFields"/>

                        <TextView
                                style="@style/TextAppearance.UWaterloo.Caption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignRight="@id/home_course_subject"
                                android:layout_below="@id/home_course_subject"
                                android:paddingLeft="4dp"
                                android:paddingRight="4dp"
                                android:text="@string/home_quick_course_hint_subject"
                                tools:ignore="RtlHardcoded"/>

                        <TextView
                                style="@style/TextAppearance.UWaterloo.Caption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignLeft="@id/home_course_number"
                                android:layout_below="@id/home_course_number"
                                android:paddingLeft="4dp"
                                android:paddingRight="4dp"
                                android:text="@string/home_quick_course_hint_number"
                                tools:ignore="RtlHardcoded"/>

                    </RelativeLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:background="@color/divider"/>

                    <Button
                            android:id="@+id/home_course_search"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:enabled="false"
                            android:text="@android:string/search_go"/>

                </LinearLayout>

            </com.deange.uwaterlooapi.sample.ui.view.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>